--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,22 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+<body>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">
+        Blog
+      </a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="/posts">Home</a></li>
+      <li><a href="/comments">Comments</a></li>
+    </ul>
+  </div>
+</nav>
+<br />
+<br />
     <div class="container"><%= yield %></div>
   </body>
 </html>
