--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -2,27 +2,20 @@
 
 <h1>Comments</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Author</th>
-      <th>Comment entry</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+  <div class="panel panel-default">
     <% @comments.each do |comment| %>
-      <tr>
-        <td><%= comment.author %></td>
-        <td><%= comment.comment_entry %></td>
-        <td><%= link_to 'Show', comment %></td>
-        <td><%= link_to 'Edit', edit_comment_path(comment) %></td>
-        <td><%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+
+        <div class="panel-body"><%= comment.author %></div>
+        <div class="panel-body"><%= comment.comment_entry %></div>
+
+        <div class="panel-footer">
+        <button type="button" class="btn btn-primary"><%= link_to 'Show', comment %></button>
+        <button type="button" class="btn btn-warning"><%= link_to 'Edit', edit_comment_path(comment) %></button>
+        <button type="button" class="btn btn-danger"><%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %></button>
+      </div>
+
     <% end %>
-  </tbody>
-</table>
+  </div>
 
 <br>
 
