--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,6 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-<body>
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -23,8 +22,18 @@
     </ul>
   </div>
 </nav>
-<br />
-<br />
-    <div class="container"><%= yield %></div>
+</br>
+</br>
+  <body>
+    <div class="container">
+      <div class="pull-right">
+        <% if user_signed_in? %>
+          <%= gravatar_tag current_user.email, size: 20 %>
+          <%= link_to "Edit Profile", edit_user_registration_path, class: "btn btn-primary" %>
+          <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "btn btn-danger" %>
+          <% end %>
+      </div>
+      </div>
+      <div><%= yield %></div>
   </body>
 </html>
