--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,7 +14,7 @@
 
     <% @posts.each do |post| %>
         <div class="panel-heading"><%= post.title %></div>
-        <div><%= "by " + post.author %></div>
+        <div>by <%= post.user.username %></div>
         <div class="panel-body"><%= post.blog_entry %></div>
 
         <div class="panel-footer" id="text_color">
