--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -44,7 +44,7 @@
 
   <div class="form-group">
     <strong>Upload a Profile Pic:</strong>
-    <%= f.file_field :avatar, class: "form-control"  %>
+    <%= f.file_field :avatar %>
   </div>
 
 
