--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -33,9 +33,8 @@
 
   <div class="form-group">
     <strong>Upload a Profile Pic:</strong>
-    <%= f.file_field :avatar, class: "form-control"  %>
+    <%= f.file_field :avatar %>
   </div>
-
 
   <div class="actions">
     <%= f.submit "Sign up", class: "btn btn-primary" %>
