--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
       <div class="container">
         <div class="pull-right">
           <% if user_signed_in? %>
-            <%= gravatar_tag current_user.email, size: 20 %>
+            <%= image_tag current_user.avatar.url, size: 20 %>
             <%= link_to "Edit Profile", edit_user_registration_path, class: "btn btn-primary" %>
             <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "btn btn-danger" %>
             <% end %>
