--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -21,7 +21,7 @@
 
   <% @post.comments.each do |comment| %>
     <p>
-      <%= comment.author %> said...<br />
+      <strong><%= link_to comment.user.username, user_posts_path(name: comment.user.username) %> said...</strong><br />
       <%= comment.comment_entry %>
     </p>
   <% end %>
